@@ -326,6 +326,7 @@ New in release 2.6.0 (2014-XX-XX):
   - PR2135: Race condition in SunEC provider with system NSS
   - PR2144: make dist fails due to lack of HotSpot-specific patches
   - PR2145, RH114622: Printing to Postscript doesn't support dieresis
+  - PR2161: RHEL 6 has a version of GIO which meets the version criteria, but has no g_settings_*
 * CACAO
   - PR2032: CACAO lacks JVM_FindClassFromCaller introduced by security patch in 2.5.3
 * AArch64 port
